--- a/Template/404.html
+++ b/Template/404.html
@@ -1,5 +1,5 @@
 <div class="wrap">
-    <div class="localpath"><a href="#">Trang chủ</a><span class="sprt icolocalpath"></span><a href="#">Mua mã thẻ điện thoại</a><span class="sprt icolocalpath"></span><em>Viettel</em></div>
+    <div class="localpath"><a href="/">Trang chủ</a></div>
     <div class="main clearfix">
     	<div class="wrap">
             <div class="boxcontent clearfix">
