--- a/Template/payment.html
+++ b/Template/payment.html
@@ -18,11 +18,11 @@
     <div class="boxpayment clearfix">
         <div class="row">
             <span class="row_st">Thanh toán</span>
-            <span class="row_nd"><span>{{total_amount}} <em>VNĐ</em></span></span>
+            <span class="row_nd"><span id="totalAmount">{{total_amount}}</span><span><em> VNĐ</em></span></span>
         </div>
         <div class="row">
             <span class="row_st">Phí ngân hàng</span>
-            <span class="row_nd"><span style="color: #43B649">Miễn phí</span></span>
+            <span class="row_nd"><span id="fee" class="fee">0<em> VNĐ</em></span></span>
         </div>
         <p>Chọn thẻ ATM nội địa</p>
         <ul class="clearfix" id="listBank">
