--- a/Template/salecard.html
+++ b/Template/salecard.html
@@ -1,5 +1,5 @@
 <div class="wrap">
-    <div class="localpath"><a href="#">Trang chủ</a><span class="sprt icolocalpath"></span><a href="#">Mua mã thẻ điện thoại</a><span class="sprt icolocalpath"></span><em>{{card_name}}</em></div>
+    <div class="localpath"><a href="/">Trang chủ</a><span class="sprt icolocalpath"></span><a href="/">Mua mã thẻ điện thoại</a><span class="sprt icolocalpath"></span><em>{{card_name}}</em></div>
     <div class="boxcontent clearfix">
         <div class="colfrist fl">
             <div class="bxcontent card">
@@ -35,7 +35,7 @@
             </table>
             {{/CARD_PRICE}}
             {{#GAME_PRICE}}
-            <h3>Bảng giá thẻ điện thoại</h3>
+            <h3>Bảng giá thẻ game</h3>
             <table width="100%" border="0" cellspacing="0" cellpadding="5" id="tablePriceList">
                 <tbody>
                     <tr class="bgselcard">
