--- a/Template/masterpage.html
+++ b/Template/masterpage.html
@@ -7,6 +7,7 @@
         <script type="text/javascript" src="{{static_url}}/js/jquery-1.11.1.js"></script>
         <script type="text/javascript" src="{{static_url}}/js/jquery.jcarousel.min.js"></script>
         <script type="text/javascript" src="{{static_url}}/js/jcarousel.responsive.js"></script>
+        <script type="text/javascript" src="{{static_url}}/js/ZeroClipboard.js?v={{static_version}}"></script>
         <script type="text/javascript" src="{{static_url}}/js/common.js?version={{static_version}}"></script>
         <script type="text/javascript" src="{{static_url}}/js/script.js?version={{static_version}}"></script>
         <title>Thẻ Giá Rẻ - Mua lẻ với giá sỉ</title>
@@ -31,9 +32,7 @@
             </div>
         </div>
         <div class="hotnews">
-            <div class="wrap">Không cần tạo tài khoản: <strong>AN TOÀN - ĐƠN GIẢN - GIÁ RẺ.</strong> 
-                <p>Khuyến mãi: <b>Miễn phí dịch vụ khi thanh toán qua thẻ ATM</b></p>
-            </div>
+            <div class="wrap">Không cần tạo tài khoản: <strong>AN TOÀN - ĐƠN GIẢN - GIÁ RẺ.</strong></div>
         </div>
         <div class="main clearfix">
             {{main_content}}
