--- a/Template/masterpage.html
+++ b/Template/masterpage.html
@@ -2,6 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="keywords" content="mua zingxu, mua thẻ điện thoại, nạp tiền mobifone, nạp tiền mobi, nạp tiền viettel, nạp tiền vina, nạp tiền vinaphone, mua thẻ game, thẻ zing, thẻ vtc, thẻ garena, thẻ bit, thẻ on, thẻ mobay" />	
+	<meta name="description" content="Mua online thẻ điện thoại, thẻ game, zingxu ...Thanh toán bằng thẻ ATM, visa, master..v.v. Không cần tạo tài khoản, an toàn, đơn giản, tiện lợi" />
+		<link rel="icon" type="image/png" href="{{static_url}}/images/favicon.ico" />
         <link rel="stylesheet" type="text/css" href="{{static_url}}/css/jcarousel.responsive.css?version={{static_version}}" />
         <link rel="stylesheet" type="text/css" href="{{static_url}}/css/screen.css?version={{static_version}}" />
         <script type="text/javascript" src="{{static_url}}/js/jquery-1.11.1.js"></script>
@@ -10,6 +13,23 @@
         <script type="text/javascript" src="{{static_url}}/js/ZeroClipboard.js?v={{static_version}}"></script>
         <script type="text/javascript" src="{{static_url}}/js/common.js?version={{static_version}}"></script>
         <script type="text/javascript" src="{{static_url}}/js/script.js?version={{static_version}}"></script>
+        <script>
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                        m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+            ga('create', 'UA-73024794-1', 'auto');
+            ga('send', 'pageview');
+
+        </script>
         <title>Thẻ Giá Rẻ - Mua lẻ với giá sỉ</title>
     </head>
     <body>
@@ -23,11 +43,12 @@
         </div>
         <div class="menu">
             <div class="wrap">
+                <a href="#"><span class="btn_fp"></span></a>
                 <ul>
                     <li><a class="current" href="/"><span class="sprt icohome"></span></a></li>
                     <li><a href="#">TIN TỨC</a></li>
-                    <li><a href="#">BẢNG GIÁ</a></li>
-                    <li class="end"><b>0908 246 357</b> <em>HOTLINE</em></li>
+                    <li><a href="/thongtin/banggia.html">BẢNG GIÁ</a></li>
+                    <li class="end">HOTLINE<b>0966 773 668</b> <em>(Viber / Zalo)</em></li>
                 </ul>
             </div>
         </div>
@@ -51,8 +72,10 @@
                 </div>
                 <div class="boxend">
                     <p class="fl">
-                        Bản quyền của <b>Công ty TNHH Giải Pháp Phần Mềm PTA Việt Nam</b><br>
-                            Giấy phép kinh doanh số 0312401085
+                        Copyright by @Thẻ Giá Rẻ 2016<br>
+                            All rights reserved
+                            <!--Bản quyền của <b>Công ty TNHH Giải Pháp Phần Mềm PTA Việt Nam</b><br>
+                                Giấy phép kinh doanh số 0312401085-->
                     </p>
                     <p class="fr"><a href="#"><span class="sprt logobct"></span></a></p>
                 </div>
