--- a/Template/homepage.html
+++ b/Template/homepage.html
@@ -1,4 +1,16 @@
 <div class="wrap">
+    {{#LIST_TYPE_TOUCH}}
+    <ul class="mboxcard clearfix">
+        <li><a href="/?m=2"><span class="msprt micocard tel"></span><b>Mua thẻ điện thoại</b></a></li>
+        <li><a href="/?m=1"><span class="msprt micocard game"></span><b>Mua thẻ game</b></a></li>
+        <li><a href="#"><span class="msprt micocard zxu"></span><b>Nạp tiền game</b></a></li>
+    </ul>
+    {{/LIST_TYPE_TOUCH}}
+    {{#LIST_CARD_TOUCH}}
+    <ul class="mboxcard list clearfix">
+        {{list_card_touch}}
+    </ul>
+    {{/LIST_CARD_TOUCH}}
     {{#MOBILE_CARD}}
     <div class="boxcard clearfix">
         <h2>Mua mã thẻ điện thoại</h2>
