Commit finish Store Credit

--- a/Template/homepage.html
+++ b/Template/homepage.html
@@ -3,7 +3,7 @@
     <ul class="mboxcard clearfix">
         <li><a href="/?m=2"><span class="msprt micocard tel"></span><b>Mua thẻ điện thoại</b></a></li>
         <li><a href="/?m=1"><span class="msprt micocard game"></span><b>Mua thẻ game</b></a></li>
-        <li><a href="#"><span class="msprt micocard zxu"></span><b>Nạp tiền game</b></a></li>
+        <li><a href="/naptiengame/zxu"><span class="msprt micocard zxu"></span><b>Nạp tiền game</b></a></li>
     </ul>
     {{/LIST_TYPE_TOUCH}}
     {{#LIST_CARD_TOUCH}}
