--- a/Template/pricelist.html
+++ b/Template/pricelist.html
@@ -5,6 +5,11 @@
         <li onclick="clickPrice('#game', this)"><a href="javascript:;"><span class="imgtabprice game"></span></a></li>
         <li onclick="clickPrice('#zingxu', this)"><a href="javascript:;"><span class="imgtabprice zxu"></span></a></li>
     </ul>
+    <ul class="mtabprice clearfix" id="menuPriceMobile">
+        <li onclick="clickPrice('#mobile', this, 'mobile')"><a href="javascript:;">Thẻ điện thoại</a></li>
+        <li onclick="clickPrice('#game', this, 'mobile')"><a href="javascript:;">Thẻ game</a></li>
+        <li onclick="clickPrice('#zingxu', this, 'mobile')"><a href="javascript:;">ZingXu</a></li>
+    </ul>
     <table width="100%" border="1" cellspacing="0" cellpadding="0" class="tableprice" id="game" style="display: none">
         <tbody>
             <tr class="header">
