--- a/Template/salecard.html
+++ b/Template/salecard.html
@@ -3,66 +3,62 @@
     <div class="boxcontent clearfix">
         <div class="colfrist fl">
             <div class="bxcontent card">
-                <table width="100%" border="0" cellspacing="0" cellpadding="10" id="tableSaleCard" class="salecard_desktop">
-                    <tbody>
-                        {{list_card}}
-                        <tr>
-                            <td class="boxcard">&nbsp;</td>
-                            <td colspan="3" class="coltotal" align="right">Thanh toán: <span id="totalAmount">0</span> <em>VNĐ</em></td>
-                            <td align="right"><a class="btnaction" href="javascript:;" onclick="acceptChooseCard();">Tiếp tục</a></td>
-                        </tr>
-                    </tbody>
-                </table>
-                <div class="salecard_mobile" id="mListCard">
+                <div id="mListCard">
                     {{list_card_mobile}}
-                    <div class="rowendtbl">
-                        Thanh toán: <span id="mTotalAmount">0 <em>VNĐ</em></span>
-                        <a class="btnaction" href="#">Tiếp tục</a>
-                    </div>
+                </div>
+                <div class="cntlt bxmoney salecard_mobile">
+                    <p>Thanh toán: <span data-id="totalAmount">0 <em>VNĐ</em></span></p>
+                    <a class="btnaction" href="javascript:;" onclick="acceptChooseCard();">Tiếp tục</a>
                 </div>
             </div>
         </div>
-        <div class="colsecond fr">
-            {{#CARD_PRICE}}
-            <h3>Bảng giá thẻ điện thoại</h3>
-            <table width="100%" border="0" cellspacing="0" cellpadding="5" id="tablePriceList">
-                <tbody>
-                    <tr class="bgselcard">
-                        <td colspan="3">
-                            <ul>
-                                <li onclick="getListPrice('viettel');" data-type="viettel"><a href="javascript:;" {{viettel_current}}><span class="sprtcard logocard viettel"></span></a></li>
-                                <li onclick="getListPrice('mobifone');" data-type="mobifone"><a href="javascript:;" {{mobifone_current}}><span class="sprtcard logocard mobifone"></span></a></li>
-                                <li onclick="getListPrice('vinaphone');" data-type="vinaphone"><a href="javascript:;" {{vinaphone_current}}><span class="sprtcard logocard vinaphone"></span></a></li>
-                                <li onclick="getListPrice('vietnamobile');" data-type="vietnamobile"><a href="javascript:;" {{vietnamobile_current}}><span class="sprtcard logocard vietnamobile"></span></a></li>
-                                <li onclick="getListPrice('gmobile');" data-type="gmobile"><a href="javascript:;" {{gmobile_current}}><span class="sprtcard logocard gmobile"></span></a></li>
-                            </ul>
-                        </td>
-                    </tr>
-                    {{list_price_card}}
-                </tbody>
-            </table>
-            {{/CARD_PRICE}}
-            {{#GAME_PRICE}}
-            <h3>Bảng giá thẻ game</h3>
-            <table width="100%" border="0" cellspacing="0" cellpadding="5" id="tablePriceList">
-                <tbody>
-                    <tr class="bgselcard">
-                        <td colspan="3">
-                            <ul>
-                                <li onclick="getListPrice('zing');" data-type="zing"><a href="javascript:;" {{zing_current}}><span class="sprtcard logocard zing"></span></a></li>
-                                <li onclick="getListPrice('garena');" data-type="garena"><a href="javascript:;" {{garena_current}}><span class="sprtcard logocard garena"></span></a></li>
-                                <li onclick="getListPrice('vtc');" data-type="vtc"><a href="javascript:;" {{vtc_current}}><span class="sprtcard logocard vtc"></span></a></li>
-                                <li onclick="getListPrice('gate');" data-type="gate"><a href="javascript:;" {{gate_current}}><span class="sprtcard logocard gate"></span></a></li>
-                                <li onclick="getListPrice('ongame');" data-type="ongame"><a href="javascript:;" {{ongame_current}}><span class="sprtcard logocard ongame"></span></a></li>
-                                <li onclick="getListPrice('mobay');" data-type="mobay"><a href="javascript:;" {{mobay_current}}><span class="sprtcard logocard mobay"></span></a></li>
-                                <li onclick="getListPrice('bit');" data-type="bit"><a href="javascript:;" {{bit_current}}><span class="sprtcard logocard bit"></span></a></li>
-                            </ul>
-                        </td>
-                    </tr>
-                    {{list_price_card}}
-                </tbody>
-            </table>
-            {{/GAME_PRICE}}
+        <div class="colsecond fr" id="boxRight">
+            <div class="cntlt bxmoney">
+                <p>Thanh toán: <span data-id="totalAmount">0 <em>VNĐ</em></span></p>
+                <a class="btnaction" href="javascript:;" onclick="acceptChooseCard();">Tiếp tục</a>
+            </div>
+            <div class="cntlt">
+                {{#CARD_PRICE}}
+                <h3>Bảng giá thẻ điện thoại</h3>
+                <table width="100%" border="0" cellspacing="0" cellpadding="5" id="tablePriceList">
+                    <tbody>
+                        <tr class="bgselcard">
+                            <td colspan="3">
+                                <ul>
+                                    <li onclick="getListPrice('viettel');" data-type="viettel"><a href="javascript:;" {{viettel_current}}><span class="sprtcard logocard viettel"></span></a></li>
+                                    <li onclick="getListPrice('mobifone');" data-type="mobifone"><a href="javascript:;" {{mobifone_current}}><span class="sprtcard logocard mobifone"></span></a></li>
+                                    <li onclick="getListPrice('vinaphone');" data-type="vinaphone"><a href="javascript:;" {{vinaphone_current}}><span class="sprtcard logocard vinaphone"></span></a></li>
+                                    <li onclick="getListPrice('vietnamobile');" data-type="vietnamobile"><a href="javascript:;" {{vietnamobile_current}}><span class="sprtcard logocard vietnamobile"></span></a></li>
+                                    <li onclick="getListPrice('gmobile');" data-type="gmobile"><a href="javascript:;" {{gmobile_current}}><span class="sprtcard logocard gmobile"></span></a></li>
+                                </ul>
+                            </td>
+                        </tr>
+                        {{list_price_card}}
+                    </tbody>
+                </table>
+                {{/CARD_PRICE}}
+                {{#GAME_PRICE}}
+                <h3>Bảng giá thẻ game</h3>
+                <table width="100%" border="0" cellspacing="0" cellpadding="5" id="tablePriceList">
+                    <tbody>
+                        <tr class="bgselcard">
+                            <td colspan="3">
+                                <ul>
+                                    <li onclick="getListPrice('zing');" data-type="zing"><a href="javascript:;" {{zing_current}}><span class="sprtcard logocard zing"></span></a></li>
+                                    <li onclick="getListPrice('garena');" data-type="garena"><a href="javascript:;" {{garena_current}}><span class="sprtcard logocard garena"></span></a></li>
+                                    <li onclick="getListPrice('vtc');" data-type="vtc"><a href="javascript:;" {{vtc_current}}><span class="sprtcard logocard vtc"></span></a></li>
+                                    <li onclick="getListPrice('gate');" data-type="gate"><a href="javascript:;" {{gate_current}}><span class="sprtcard logocard gate"></span></a></li>
+                                    <li onclick="getListPrice('ongame');" data-type="ongame"><a href="javascript:;" {{ongame_current}}><span class="sprtcard logocard ongame"></span></a></li>
+                                    <li onclick="getListPrice('mobay');" data-type="mobay"><a href="javascript:;" {{mobay_current}}><span class="sprtcard logocard mobay"></span></a></li>
+                                    <li onclick="getListPrice('bit');" data-type="bit"><a href="javascript:;" {{bit_current}}><span class="sprtcard logocard bit"></span></a></li>
+                                </ul>
+                            </td>
+                        </tr>
+                        {{list_price_card}}
+                    </tbody>
+                </table>
+                {{/GAME_PRICE}}
+            </div>
         </div>
     </div>
 </div>
